--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
    <head>
       <title>BUC-AA</title>
+       <link rel="icon" href="https://cdn.discordapp.com/attachments/1141328000156180500/1146726936740118651/372898839_615602897444571_4347508432357532021_n-removebg-preview.png" type="image/png" sizes="32x32">
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width,initial-scale=1">
       <link href="https://fonts.googleapis.com/css?display=swap&amp;family=Inter:300,300italic,200,200italic,500,500italic%7CSora:600,600italic" rel="stylesheet" type="text/css">
@@ -8,7 +9,20 @@
       <noscript>
          <style>body {overflow: auto !important;}body:after {display: none !important;}#main > .inner {opacity: 1.0 !important;}</style>
       </noscript>
-      <style></style>
+      <style>
+         ::-webkit-scrollbar {
+         width: 1px;
+         }
+         ::-webkit-scrollbar-track {
+         background: black;
+         }
+         ::-webkit-scrollbar-thumb {
+         background: transparent;
+         }
+         ::-webkit-scrollbar-thumb:hover {
+         background: transparent;
+         }
+      </style>
    </head>
    <body class="is-ready">
       <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 40 40" display="none" width="0" height="0">
