--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                            <div class="inner">
                               <ul>
                                  <li style="opacity: 1; transform: none;"><a href="https://ixia.games" target="_blank"><span class="frame"><img src="https://cdn.discordapp.com/avatars/893440795837878312/eef27715690a98f2d7b29b3ddb3b546d.webp?size=4096" alt=""></span></a></li>
-                                 <li style="opacity: 1; transform: none;"><a href="" target="_blank"><span class="frame"><img src="https://cdn.discordapp.com/avatars/1137574286631108678/517442ec44191380a643f40d72099bbc.webp?size=4096" alt=""></span></a></li>
+                                 <li style="opacity: 1; transform: none;"><a href="https://limeai.xyz/" target="_blank"><span class="frame"><img src="https://cdn.discordapp.com/avatars/1137574286631108678/517442ec44191380a643f40d72099bbc.webp?size=4096" alt=""></span></a></li>
                                  <li style="opacity: 1; transform: none;"><a href="https://discord.com/oauth2/authorize?client_id=1098600901960282195&scope=bot%20applications.commands&permissions=377921" target="_blank"><span class="frame"><img src="https://media.discordapp.net/attachments/1173958661081661521/1206811977742164049/d87d94800061c1ee40b7aa3510d86970.png?ex=65dd5e3c&is=65cae93c&hm=69010b745db763301175dcc9371ece936e95615f2817a8a236eca74e23e31b16&=&format=webp&quality=lossless&width=662&height=662" alt=""></span></a></li>
                                  <li style="opacity: 1; transform: none;"><a href="https://www.hacktcat.com" target="_blank"><span class="frame"><img src="https://cdn.discordapp.com/avatars/1140593617526857752/29254288817e82e97eb077d557a46eac.webp?size=4096" alt=""></span></a></li>
 
